--- a/comment_creator/qt_ui/mainGUI.ui
+++ b/comment_creator/qt_ui/mainGUI.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>554</width>
-    <height>260</height>
+    <height>291</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -29,15 +29,15 @@
      <x>10</x>
      <y>150</y>
      <width>530</width>
-     <height>70</height>
+     <height>101</height>
     </rect>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>230</y>
+     <y>260</y>
      <width>537</width>
      <height>22</height>
     </rect>
@@ -152,7 +152,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
